--- a/css.css
+++ b/css.css
@@ -8,11 +8,28 @@
     box-sizing: border-box;
     
 }
-*::-webkit-scrollbar {
-    width: 0;
-  }
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
 
 /*NAV_BAR*/
+
 
 .nav_bar
 {
@@ -179,6 +196,7 @@
 
 }
 
+
 /*A_PROPOS*/
 
 .a_propos
@@ -187,7 +205,7 @@
     display: flex;
     position: relative;
     z-index: 0;
-    padding-top: 12%;
+    padding-top: 7%;
     padding-bottom: 6%;
     padding-right: 5%;
     padding-left: 5%;
@@ -195,13 +213,13 @@
 .a_propos .text_moi
 { 
     position: absolute;
-    margin-left: 7%;
+    margin-left: 14%;
     width: 30%;
     margin-top: 4%;
     background-color: white;
     z-index: 2;
     padding: 50px;
-    padding-bottom: 8%;
+    padding-bottom: 3%;
 }
 .a_propos .a_porpos_image
 {
@@ -234,8 +252,89 @@
 .a_propos .text_moi span
 {
     font-size: 1.6em;
-
-
+}
+.all_card
+{
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-top: 5%
+}
+.all_card .card:nth-child(1)
+{
+    margin-left: 0px;
+}
+.card 
+{
+    display: flex;
+    width: 80px;
+    height: 15.5vh;
+    border-radius: 9.5px;
+    background: rgb(255,255,255);
+    position: relative;
+    border: 2px solid rgba(82, 82, 82, 0.616);
+    transition: 0.5s ease-out;
+    overflow: visible;
+    justify-content: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-left: -29px;
+    z-index: 0;
+}
+.card-details 
+{
+    color: black;
+    height: 100%;
+    gap: .5em;
+    display: grid;
+    place-content: center;
+}   
+.card .card-details p
+{
+    transform: rotate(-90deg);
+    transition: all .5s;
+}
+.text-title 
+{
+    font-size: 1.1em;
+    font-weight: bolder;
+}
+.card:hover 
+{
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+    transform: scale(1.05);  
+    z-index: 1;
+    margin-right: 20px;
+}
+.card:hover:nth-child(1)
+{
+    background-color: rgb(238, 139, 36);
+}
+.card:hover:nth-child(2)
+{
+    background-color: rgb(38, 132, 255);
+}
+.card:hover:nth-child(3)
+{
+    background-color: #68217A;
+}
+.card:hover:nth-child(4)
+{
+    background-color: #00758F;
+}
+.card:hover .card-details p
+{
+    transform: rotate(0deg);
+    transition: all .5s;
+    letter-spacing: .1em;
+    color: #f9f9f9;
+}
+.a_propos .text_moi .cv
+{
+    display: flex;
+    border-radius: 15px;
+    margin-top: 12%;
+    gap: 2%;
 }
 .a_propos .text_moi .cv_page
 {
@@ -265,13 +364,7 @@
     border-radius: 15px;
     place-items: center;
 }
-.a_propos .text_moi .cv
-{
-    display: flex;
-    border-radius: 15px;
-    margin-top: 20%;
-    gap: 2%;
-}
+
 
 /*EXPERIENCE*/
 
@@ -704,7 +797,22 @@
     transform: scale(.95, 1);
     padding-bottom: 5%;
   }
-  
+.contact-boite .contact-liens h3
+    {
+        font-size: 1.4em;
+        justify-content: center;
+        text-align: center;
+        padding-top: 10%;
+    }
+.contact-boite .contact-liens h3 a
+    {
+        color: #fff;
+        text-decoration: none;
+    }
+  .contact-boite .contact-liens h3 i
+  {
+   padding-right: 2%;
+  }
   .form-item 
   {
     position: relative;
@@ -831,9 +939,24 @@
 
 
 
+
 /*MEDIA QUERIE*/
 
-@media screen and (max-width: 1550px) {
+
+@media screen and (max-width: 1900px) 
+{
+    .a_propos .text_moi
+    {
+        padding-bottom: 2%;
+    }
+    .a_propos .text_moi span
+    {
+        font-size: 1.4em;
+    }
+}
+
+@media screen and (max-width: 1550px) 
+{
     .nav_bar 
     {
        font-size: 1em;
@@ -857,6 +980,20 @@
         margin-right: 2%;
  
     }
+    .all_card
+    {
+        margin-top: 3%
+    }
+    .card 
+    {
+        width: 90px;
+        height: 150px;
+    }
+    .text-title 
+    {
+        font-size: 1.3em;
+        font-weight: bolder;
+    }
     .a_propos .text_moi h1
     {
 
@@ -876,7 +1013,7 @@
     }
     .a_propos .text_moi .cv
     {
-        margin-top: 4%; 
+        margin-top: 0%; 
     }
     .a_propos .text_moi .cv_page
     {
@@ -1051,6 +1188,15 @@
         margin-top: 1%;
         margin-bottom: 1%;
     }
+    .card 
+    {
+        width: 80px;
+    }
+    .text-title 
+    {
+        font-size: 1.15em;
+        font-weight: bolder;
+    }
     .a_propos .text_moi h1
     {
 
@@ -1164,6 +1310,17 @@
     {
         padding-top: 2%;
     }
+    .social-media-list li 
+    {
+    height: 50px;
+    width: 50px;
+    line-height: 58px;
+    font-size: 1em;
+    }
+    .social-media-list li a 
+    {
+      font-size: 1.8em;
+    }
     .footer
     {
         font-size: 1em;
@@ -1183,9 +1340,13 @@
     }
     .social-media-list li:after 
     {
-        width: 60px;
-        height: 60px;
-        line-height: 60px;
+        width: 50px;
+        height: 50px;
+        line-height: 38px;
+    }
+    .social-media-list li a 
+    {
+      font-size: 1.8em;
     }
     .contact-boite .contact-liens h2 
     {
@@ -1209,6 +1370,20 @@
     .hero h2
     {
         font-size: 1.2em;
+    }
+    .all_card
+    {
+        margin-top: 4%
+    }
+    .card 
+    {
+        width: 70px;
+        height: 130px;
+    }
+    .all_card .card .card-details .text-title 
+    {
+        font-size: 0.8em;
+        font-weight: bolder;
     }
     .a_propos .text_moi p
     {
@@ -1295,6 +1470,16 @@
         font-size: 0.8em;
         padding-top: 5% ;
     }
+    .social-media-list li:after 
+    {
+        width: 50px;
+        height: 50px;
+        line-height: 80px;
+    }
+    .social-media-list li a 
+    {
+      font-size: 1.8em;
+    }
 }
 
 @media screen and (max-width: 460px) {
@@ -1357,14 +1542,14 @@
     }
     .social-media-list li 
     {
-    height: 8vh;
-    width: 13vw;
-    line-height: 35px;
+    height: 50px;
+    width: 50px;
+    line-height: 58px;
     font-size: 1.8em;
     }
     .social-media-list li a
     {
-    font-size: 0.6em;
+    font-size: 1em;
     }
     .social-media-list li:after 
     {
@@ -1406,9 +1591,10 @@
     }
     .social-media-list li 
     {
-    height: 8vh;
-    width: 15vw;
-    line-height: 33px;
+    height: 50px;
+    width: 50px;
+    line-height: 58px;
+    font-size: 1.7em;
     }
     .footer
     {
