--- a/css.css
+++ b/css.css
@@ -299,7 +299,7 @@
     font-size: 1.1em;
     font-weight: bolder;
 }
-.card:hover 
+.card:hover , .card:focus , .card:active
 {
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
     transform: scale(1.05);  
