--- a/css.css
+++ b/css.css
@@ -27,6 +27,52 @@
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
 }
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 22; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+
+  }
+  
+  .modal_content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    color: black;
+    border: 1px solid #888;
+    width: 90%;
+    height: auto;
+    display: column;
+    justify-content: center;
+  }
+  .modal .modal_content p
+  {
+
+    color: black;
+
+  }
+  
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 /*NAV_BAR*/
 
