--- a/css.css
+++ b/css.css
@@ -98,6 +98,7 @@
     text-decoration: none;
     font-size: 18.5px;
     font-weight: 600;
+
 }
 
 .nav_bar .nav_links ul
@@ -111,6 +112,7 @@
 .nav_bar .nav_links ul li.active a
 {
     color: rgb(164,78,82);
+    
 } 
 .nav_bar .nav_links ul li a:hover
 {
@@ -367,6 +369,10 @@
 .card:hover:nth-child(4)
 {
     background-color: #00758F;
+}
+.card:hover:nth-child(5)
+{
+    background-color: #7A86B8;
 }
 .card:hover .card-details p
 {
@@ -830,7 +836,7 @@
   .contact-boite .contact-liens
   {
     background-color: rgb(185, 74, 80);
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px 10px 10px 10px;
     justify-content: center;
   }
   .contact-boite .contact-liens h2 
@@ -1179,7 +1185,8 @@
         opacity: 0;
         border-radius:8px ;
         transition: 0.3s;
-    }
+        margin-right: -15%;
+    }   
     .nav_bar .nav_links .dropmenu .content a
     {
         color: black;
@@ -1189,7 +1196,8 @@
     {
         font-size: 8px;
     }
-    .nav_links{
+    .nav_links
+    {
         position: absolute;
         background-color: rgba(255, 255, 255, 0.20);
         width: 100%;
@@ -1207,7 +1215,8 @@
     {
         margin-right: 0;
     }
-    .nav_bar .nav_links ul{
+    .nav_bar .nav_links ul
+    {
         display: flex;
         flex-direction: column;
         align-items: center; 
@@ -1218,7 +1227,6 @@
         padding: 15px 0;
         font-size: 1.5em;
     }
-
     .nav_links ul li a
     {
         color: black;
