--- a/css.css
+++ b/css.css
@@ -144,8 +144,16 @@
     border-radius:8px ;
     transition: 0.3s;
     margin-top: 35%;
-    right: 1%;
+    right: -9%;
 }
+.nav_bar .nav_links .dropmenu li
+{
+    color: white;
+    text-decoration: none;
+    font-size: 18.5px;
+    font-weight: 600;
+    cursor: pointer;
+} 
 .nav_bar .nav_links .dropmenu .content a
 {
     display: block;
@@ -1186,6 +1194,13 @@
         border-radius:8px ;
         transition: 0.3s;
         margin-right: -15%;
+        margin-top: 5%;
+    }   
+    .nav_bar .nav_links .dropmenu li
+    {
+        color: black;
+        font-size: 17px;
+        font-weight: bold;
     }   
     .nav_bar .nav_links .dropmenu .content a
     {
