--- a/css.css
+++ b/css.css
@@ -27,6 +27,7 @@
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
 }
+
 .modal {
     display: none; 
     position: fixed; 
@@ -227,6 +228,7 @@
 {
     margin-left: 6px;
     display: flex;
+    letter-spacing: 2px;
     font-weight: 600;
     text-shadow: 50px;
     text-align: center;
