--- a/css.css
+++ b/css.css
@@ -668,7 +668,21 @@
     padding-top: 2%;
     font-weight: 500;
 }
-
+.btn
+{
+    display: inline-block;
+        background-color: rgb(185, 74, 80);
+        border-radius: 10px;
+        border: 4px double #cccccc;
+        color: #eeeeee;
+        text-align: center;
+        font-size: 28px;
+        padding: 2px;
+        width: 100%;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+}
 
 /*CONTACTER*/
 
